--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,6 +27,9 @@
         {% endif %}
       {% endfor %}
 
+      <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
+        <a href="{{site.baseurl}}/blog/">Blog</a>
+      </li>
       <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/downloads/cv.pdf">CV</a></li>
     </ul>
 
