--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -9,3 +9,17 @@
  -webkit-border-radius: 50%;
  -moz-border-radius: 50%;
 }
+
+.footer {
+  font-size: 0.65rem;
+  font-weight: 100;
+  color: #aaa;
+  /*opacity:	0.6;*/
+  position:relative;    
+  top:3.5rem; 
+  bottom:0;    
+  width:100%;    
+  height:10%;
+}
+
+
