--- a/assets/css/my.css
+++ b/assets/css/my.css
@@ -16,10 +16,12 @@
   color: #aaa;
   /*opacity:	0.6;*/
   position:relative;    
-  top:3.5rem; 
+  top:2rem; 
   bottom:0;    
   width:100%;    
   height:10%;
 }
+
+.footer hr { margin-top: 10px; margin-bottom: 10px }
 
 
