updated poole/hyde manually; also two drafts

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -30,6 +30,9 @@
       <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
         <a href="{{site.baseurl}}/blog/">Blog</a>
       </li>
+      <li class="sidebar-nav-item"><a href="https://github.com/elipapa">Github</a></li>
+      <li class="sidebar-nav-item"><a href="https://uk.linkedin.com/in/eliseopapa
+">LinkedIn</a></li>
       <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/downloads/cv.pdf">CV</a></li>
     </ul>
 
