baseurl was only for non root location

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -28,12 +28,12 @@
       {% endfor %}
 
       <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
-        <a href="{{site.baseurl}}/blog/">Blog</a>
+        <a href="{{site.url}}/blog/">Blog</a>
       </li>
       <li class="sidebar-nav-item"><a href="https://github.com/elipapa">Github</a></li>
       <li class="sidebar-nav-item"><a href="https://uk.linkedin.com/in/eliseopapa
 ">LinkedIn</a></li>
-      <li class="sidebar-nav-item"><a href="{{ site.baseurl }}/downloads/cv.pdf">CV</a></li>
+      <li class="sidebar-nav-item"><a href="{{ site.url }}/downloads/cv.pdf">CV</a></li>
     </ul>
 
     <p>&copy; {{ site.time | date: '%Y' }}. All rights reserved.</p>
