don't showcase blog

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -27,9 +27,9 @@
         {% endif %}
       {% endfor %}
 
-      <li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
+      <!--<li class="sidebar-nav-item{% if page.title == "Blog" %} active{% endif %}">
         <a href="{{site.url}}/blog/">Blog</a>
-      </li>
+      </li>-->
       <li class="sidebar-nav-item"><a href="https://github.com/elipapa">Github</a></li>
       <li class="sidebar-nav-item"><a href="https://uk.linkedin.com/in/eliseopapa
 ">LinkedIn</a></li>
