--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,16 +1,50 @@
+---
+layout: compress
+---
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en">
+<head>
 
-  {% include head.html %}
+    <meta charset="utf-8">
+    <meta http-equiv=X-UA-Compatible content="IE=edge,chrome=1">
+    <meta name=viewport content="width=device-width, initial-scale=1">
 
-  <body>
+    <meta name=description content="{{ site.bio }}">
+    <meta name=author content="{{ site.name }}">
 
-    {% include sidebar.html %}
+    {% seo %}
+    
+    {% include favicon.html %}
 
-    <div class="content container">
-      {{ content }}
-	</div>
+    <link rel="canonical" href="{{ site.url }}{{ page.url | replace:'index.html','' }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}{{ "/feed.xml" }}" />
 
+    <style>
+    {% capture scss_sheet %}{% include style.scss %}{% endcapture %}
+    {{ scss_sheet | scssify }}
+    </style>
 
-  </body>
+</head>
+<body>
+
+    <div class="wrapper-{% if site.width == "normal" %}normal{% elsif site.width == "large" %}large{% endif %}">
+        {% if page.tag %}
+            <div class="post">
+        {% else %}
+            {% if showHeader != true %}
+                <div class="page {{ page.title | downcase }}">
+            {% else %}
+                <div class="{{ page.title | downcase }}">
+            {% endif %}
+        {% endif %}
+
+            {{ content }}
+        </div>
+    </div>
+
+    {% include icons.html %}
+
+    {% include analytics-google.html %}
+
+</body>
 </html>
