moved old index info elsewhere

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,4 +4,6 @@
     <p class="extra">
         <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a> by <a class="link" href="http://koppl.in">Kopplin</a>
     </p>
+
+    <p>Logo courtesy of <a href="http://katlab.github.com">kat</a>.</p>
 </footer>
