--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -2,8 +2,8 @@
     {{ site.name }} © {{ site.time | date: '%Y' }} <a class="link" href="{{ site.url }}/feed.xml" target="_blank"><svg class="icon icon-rss"><use xlink:href="#icon-rss"></use></svg></a>
 
     <p class="extra">
-        <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo theme</a> by <a class="link" href="http://koppl.in">Kopplin</a>
+        Published with <a href="https://jekyllrb.com">Jekyll</a> with a theme adapted from <a class="link" href="https://github.com/sergiokopplin/indigo">Indigo</a>.
+        Logo courtesy of <a href="http://katlab.github.com">kat</a>.
     </p>
 
-    <p>Logo courtesy of <a href="http://katlab.github.com">kat</a>.</p>
 </footer>
