--- a/_includes/social-links.html
+++ b/_includes/social-links.html
@@ -49,7 +49,7 @@
 
     {% if site.lastfm %}
         <a class="link" data-title="last.fm/user/{{ site.lastfm }}" href="https://last.fm/user/{{ site.lastfm }}" target="_blank">
-            <svg class="icon icon-lastfm"><use xlink:href="#icon-lastfm"></use></svg>   
+            <svg class="icon icon-lastfm"><use xlink:href="#icon-lastfm"></use></svg>
         </a>
     {% endif %}
 
@@ -58,7 +58,7 @@
             <svg class="icon icon-github"><use xlink:href="#icon-github"></use></svg>
         </a>
     {% endif %}
-    
+
     {% if site.stackoverflow %}
         <a class="link" data-title="stackoverflow.com/users/{{ site.stackoverflow }}" href="http://stackoverflow.com/users/{{ site.stackoverflow }}" target="_blank">
             <svg class="icon icon-stackoverflow"><use xlink:href="#icon-stackoverflow"></use></svg>
@@ -80,6 +80,12 @@
     {% if site.medium %}
         <a class="link" data-title="medium.com/@{{ site.medium }}" href="https://medium.com/@{{ site.medium }}" target="_blank">
             <svg class="icon icon-medium"><use xlink:href="#icon-medium"></use></svg>
+        </a>
+    {% endif %}
+
+    {% if site.orcid %}
+        <a class="link" data-title="orcid.org/{{ site.orcid }}" href="http://europepmc.org/authors/{{ site.orcid }}" target="_blank">
+            <svg class="icon icon-orcid"><use xlink:href="#icon-orcid"></use></svg>
         </a>
     {% endif %}
 
